2017-10-08  Bruno Haible  <bruno@clisp.org>

	Update to the newest gnulib.
	Ran "make -f Makefile.devel build-aux-update gnulib-imported \
	&& make -f Makefile.devel build-prerequisites".
	* gllib/*: Update from gnulib.

2017-10-08  Bruno Haible  <bruno@clisp.org>

	Define mappable address range for many platforms.
	* lispbibl.d (UNIX_GNU_FREEBSD, UNIX_IRIX): New macros.
	(MAPPABLE_ADDRESS_RANGE_START, MAPPABLE_ADDRESS_RANGE_END): Define for
	many platforms.
	(ADDRESS_RANGE_RANDOMIZED): Don't define on OpenBSD.

2017-10-08  Bruno Haible  <bruno@clisp.org>

	New option "-marc" for mappable address range check.
	* spvw.d (mappable_address_range_check): New function.
	(parse_options): New option "-marc".
	* makemake.in: New target 'marc.out'.
	(all): Depend on it.
	(clean1): Remove it.

2017-10-08  Bruno Haible  <bruno@clisp.org>

	Emit the output of "lisp.run -mm" to stdout, not stderr.
	* win32.d (DumpProcessMemoryMap): Accept a FILE* argument.
	* win32aux.d (DumpProcessMemoryMap): Likewise.
	* spvw.d (dump_process_memory_map_callback): Likewise.
	(dump_process_memory_map): Likewise.
	(parse_options): Pass stdout.
	* spvw_mmap.d (warn_before_reserving_range, mmap_prepare): Pass stderr.

2017-10-08  Bruno Haible  <bruno@clisp.org>

	Fix misuse of Autoconf cache.
	* m4/mmap.m4 (CL_MMAP): Put the complete test result in a single *_cv_*
	variable.
	* aclocal.m4, src/configure: Regenerated.

2017-10-08  Bruno Haible  <bruno@clisp.org>

	Fix build failure with pre-C99 compilers (regression from 2017-03-14).
	* spvw_mmap.d: Use 'var' where appropriate.
	* pathname.d: Put (void)param statements first.

2017-10-07  Bruno Haible  <bruno@clisp.org>

	Properly recognize PowerPC64 CPU on AIX.
	* lispbibl.d (POWERPC64): Define also when _ARCH_PPC64 is defined.

2017-10-07  Bruno Haible  <bruno@clisp.org>

	Fix error when creating lispbibl.h on AIX.
	* makemake.in (lispbibl.h): Start the command with '( (', not '(('.

2017-10-07  Bruno Haible  <bruno@clisp.org>
