@@ -1,3 +1,9 @@
+2017-10-12  Bruno Haible  <bruno@clisp.org>
+
+	Fix mistake in "highest bit number" test (regression from 2017-10-08).
+	* m4/mmap.m4 (CL_MMAP): Update after value of cache variable changed.
+	* aclocal.m4, src/configure: Regenerated.
+
 2017-10-08  Bruno Haible  <bruno@clisp.org>
 
 	Update to the newest gnulib.
